# image-to-sketch

./: .gitignore  CMakeLists.txt
resource/distance/500-color/: 0.json  10025880.json  10061943.json  10066329.json  10156544.json  10157978.json  10197965.json  10210715.json  10212351.json  10263708.json  1030655.json  10392013.json  10395294.json  10397699.json  10401741.json  10451438.json  10485588.json  10526303.json  10592673.json  10604526.json  10724259.json  10865101.json  10921638.json  10957038.json  10971886.json  11053224.json  11119017.json  11184810.json  11186720.json  11190725.json  11193702.json  11200750.json  11229501.json  11240191.json  11250603.json  11379438.json  11382189.json  11389934.json  11394815.json  11458798.json  (+512 more)
source/: main.cpp
source/helper/: color.cpp  color.hpp
source/reducer/: color_reducer.cpp  color_reducer.hpp
